--- a/package.json
+++ b/package.json
@@ -14,10 +14,11 @@
     "lint": "next lint",
     "lint:fix": "next lint --fix",
     "type-check": "tsc --noEmit",
-    "test": "jest --passWithNoTests",
-    "test:unit": "jest --passWithNoTests",
-    "test:watch": "jest --watch",
-    "test:coverage": "jest --coverage --passWithNoTests",
+    "test": "jest --passWithNoTests --testPathPattern=src/",
+    "test:unit": "jest --passWithNoTests --testPathPattern=src/",
+    "test:watch": "jest --watch --testPathPattern=src/",
+    "test:coverage": "jest --coverage --passWithNoTests --testPathPattern=src/",
+    "test:ci": "jest --config=jest.config.ci.js --ci --coverage --passWithNoTests --verbose=false",
     "test:e2e": "playwright test --project=chromium",
     "test:e2e:all": "playwright test",
     "test:e2e:headed": "playwright test --headed --project=chromium",
