--- a/.github/workflows/deploy-production.yml
+++ b/.github/workflows/deploy-production.yml
@@ -49,7 +49,7 @@ jobs:
         run: npm ci --prefer-offline --no-audit
 
       - name: 🧪 Run tests
-        run: npm run test
+        run: npm run test:ci
         continue-on-error: ${{ github.event.inputs.force_deploy == 'true' }}
 
       - name: 🔍 Security scan
