some bable fixeds

--- a/package.json
+++ b/package.json
@@ -14,10 +14,10 @@
     "lint": "next lint",
     "lint:fix": "next lint --fix",
     "type-check": "tsc --noEmit",
-    "test": "jest --passWithNoTests --testPathPattern=src/",
-    "test:unit": "jest --passWithNoTests --testPathPattern=src/",
-    "test:watch": "jest --watch --testPathPattern=src/",
-    "test:coverage": "jest --coverage --passWithNoTests --testPathPattern=src/",
+    "test": "jest --passWithNoTests",
+    "test:unit": "jest --passWithNoTests",
+    "test:watch": "jest --watch",
+    "test:coverage": "jest --coverage --passWithNoTests",
     "test:ci": "jest --config=jest.config.ci.js --ci --coverage --passWithNoTests --verbose=false",
     "test:e2e": "playwright test --project=chromium",
     "test:e2e:all": "playwright test",
@@ -54,6 +54,7 @@
     "@babel/preset-env": "^7.27.1",
     "@babel/preset-react": "^7.27.1",
     "@babel/preset-typescript": "^7.27.1",
+    "babel-jest": "^29.7.0",
     "@next/bundle-analyzer": "^14.0.4",
     "@playwright/test": "^1.54.2",
     "@tailwindcss/forms": "^0.5.7",
